# flaggam

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
DECISIONS/: index.html
LICENSING/: index.html
api/: index.html
assets/: rules-explorer.html
benchmarks/: _method_impls.py  methods.py  paper_targets.py  protocol.py  render_tables.py  run_ablation.py  run_classification.py  run_regression.py  run_robustness.py  run_sensitivity.py  runner.py
changelog/: index.html
concepts/benchmarks/: index.html
concepts/calibration/: index.html
concepts/fairness/: index.html
concepts/missing-values/: index.html
concepts/monotonicity/: index.html
concepts/rules-and-screening/: index.html
concepts/visualization/: index.html
docs/: DECISIONS.md  LICENSING.md  api.md  faq.md  getting-started.md  how-it-works.md  index.md
docs/api/: bases.md  calibration.md  core.md  datasets.md  estimator.md  explorer.md  fairness.md  heads.md  index.md  inspection.md  missing.md  monotonic.md  plots.md  screening.md  weighting.md
docs/assets/: rules-explorer.html
docs/concepts/: benchmarks.md  calibration.md  fairness.md  missing-values.md  monotonicity.md  rules-and-screening.md  visualization.md
docs/notebooks/: german_credit.ipynb
docs/user-guide/: algorithm.md  benchmarks.md  extensions.md  rules-and-screening.md  visualization.md
faq/: index.html
getting-started/: index.html
how-it-works/: index.html
notebooks/german_credit/: index.html
scripts/: make_rules_explorer.py
search/: search_index.json
src/flaggam/: __init__.py  bases.py  calibration.py  core.py  datasets.py  estimator.py  explorer.py  fairness.py  heads.py  inspection.py  missing.py  monotonic.py  plots.py  screening.py  weighting.py
tests/: test_bases.py  test_calibration.py  test_core.py  test_datasets.py  test_estimator.py  test_explorer.py  test_fairness.py  test_heads.py  test_inspection.py  test_methods.py  test_missing.py  test_monotonic.py  test_no_leakage.py  test_notebook.py  test_package.py  test_plots.py  test_protocol.py  test_runner.py  test_screening.py  test_sklearn_compat.py  test_smoke_benchmark.py  test_weighting.py
