[project]
name = "flaggam"
version = "0.1.0"
description = "FlagGAM: rule-basis generalized additive models for explainable tabular prediction (Zhao & Welsch, 2026; from-scratch implementation)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = [
    "interpretability",
    "generalized-additive-models",
    "rule-based",
    "scikit-learn",
    "credit-scoring",
    "tabular",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "scikit-learn>=1.8",
]

[project.urls]
Homepage = "https://github.com/wlazlod/flaggam"
Documentation = "https://wlazlod.github.io/flaggam/"
Changelog = "https://github.com/wlazlod/flaggam/blob/main/CHANGELOG.md"
Issues = "https://github.com/wlazlod/flaggam/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "black>=24", "mypy>=1.10"]
viz = ["matplotlib>=3.8"]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]
benchmarks = [
    "interpret>=0.6",
    "imodels>=1.4",
    "xgboost>=2.0",
    "ucimlrepo>=0.0.7",
    "openml>=0.14",
]

[tool.uv]
constraint-dependencies = ["numba>=0.58", "llvmlite>=0.41"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flaggam"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
packages = ["flaggam", "benchmarks"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not network'"
markers = [
    "network: requires internet download of benchmark datasets",
    "slow: long-running benchmark test",
]
filterwarnings = [
    # parametrize_with_checks yields a generator; this is a sklearn issue, not ours.
    "ignore::pytest.PytestRemovedIn10Warning",
]
